frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
@import '../../../styles/colors';

.income-vs-expense, .income-vs-expense-chart {
    min-height: 250px;  
}

.income-vs-expense-chart {
    display: grid;
    width: 100%;
    grid-template-rows: 1fr;
    grid-template-columns: 0.5fr 1fr;

    .ivse-title {
        color: $text-gray;
        font-weight: bold;
    }

    .ivse-value {
        margin-left: 10px;
        font-weight: 600;
    }

    .chart-stats {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
    }
    
    .chart-div {
        grid-row: 1/3;
        background-color: rgb(238, 238, 238);
        margin-bottom: 10px;
        border-radius: 10px;
        .pie-chart {
            margin: 0 auto;
            padding-right: 40px;
        }
    }

    .chart-btn-holder {
        grid-column: 1/2;
        grid-row: 2/3;
        padding: 1em 0 1em 0;
    }
}

.loading-screen {
    .loading{ 
        background-color: $border-light;
        color: black;
        display: flex;
        flex-direction: column; 
        align-items: center;
        flex-grow: 1;
    }
    display: flex;
    flex-direction: row;
    align-items: center;
    vertical-align: middle;
    background-color: $border-light;
    font-size: 18px;
    font-weight: 600;
}



.period-selector {
    padding-bottom: 10px;
}    

.or-label {
    font-weight: bold;
    color: $text-gray;
    background: white;
}

.custom-range {
    color: black;
    font-weight: 600;
    padding-top: 10px;
}

.line-separator {
    margin: 0 auto;
    width: 95%;
    height: 1px;
    background:#717171;
    border-bottom:1px solid $border-light;
}

@media only screen and (max-width: 800px) {
    .income-vs-expense-chart {
        display: flex;
        flex-direction: column;
    
        .chart-stats {
            order: 2;
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            justify-content: space-evenly;
        }
        
        .chart-div {
            .pie-chart {
                margin: 0 auto;
                padding-right: 40px;
            }
        }
    
        .chart-btn-holder {
            order: 3;
            padding: 1em 0 1em 0;
        }
    }
}

